fix display overflow

--- a/src/index.css
+++ b/src/index.css
@@ -127,8 +127,9 @@
 
 .home {
     background-color: blueviolet;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
